fixed inaccurate processing
